<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.tudresden.inf.st</groupId>
	<artifactId>videoshop</artifactId>
	<version>2.0.0.BUILD-SNAPSHOT</version>

	<parent>
		<groupId>de.tudresden.inf.st.lab</groupId>
		<artifactId>st-lab-parent</artifactId>
		<version>2.2.0.BUILD-SNAPSHOT</version>
	</parent>
	
	<properties>
		<java.version>11</java.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator-core</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>Semantic-UI</artifactId>
			<version>2.2.10</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>3.2.1</version>
			<scope>runtime</scope>
		</dependency>

	</dependencies>

	<repositories>

		<repository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</repository>

		<repository>
			<id>salespointframework</id>
			<url>https://www.st.inf.tu-dresden.de/SalesPoint/repository</url>
		</repository>

	</repositories>

	<pluginRepositories>

		<pluginRepository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</pluginRepository>

	</pluginRepositories>

</project>
